Implementar o requisito 4 do carrinho de compras