@@ -1,20 +1,19 @@
 package unit.JsonFiles;
 
 import entities.Comprador;
+import org.json.JSONArray;
 import org.json.JSONObject;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import repositories.CompradorRepository;
 import util.JsonFileCRUDCompradorUtil;
 import util.JsonFileUtil;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.*;
-import static org.mockito.Mockito.times;
-import org.json.JSONArray;
+
 public class JsonFileCRUDCompradorUtilTest {
 
     Comprador comprador = new Comprador("josé", "hugo@gmail.com", "mustbe a hash", "701.254.231-72", "myhome");
@@ -22,12 +21,6 @@ public class JsonFileCRUDCompradorUtilTest {
     List<Comprador> compradorArray = Arrays.asList(comprador, new Comprador());
     JSONArray getFilledArray;
 
-    class MyJsonFileUtil extends JsonFileUtil{
-        @Override
-        public JSONArray loadJsonArray(String path){
-            return super.loadJsonArray(path);
-        }
-    }
     @BeforeEach
     void addToArray() {
         JSONObject compradorJSON = new JSONObject();
@@ -36,9 +29,10 @@ public class JsonFileCRUDCompradorUtilTest {
         compradorJSON.put("endereco", comprador.getEndereco());
         compradorJSON.put("senha", comprador.getSenha());
         compradorJSON.put("cpf", comprador.getCpf());
-        List<JSONObject> array = Arrays.asList(compradorJSON);
+        List<JSONObject> array = List.of(compradorJSON);
         getFilledArray = new JSONArray(array);
     }
+
     @Test
     public void getCompradorByCpf() throws Exception {
         String cpf = comprador.getCpf();
@@ -50,9 +44,10 @@ public class JsonFileCRUDCompradorUtilTest {
         assertTrue(jsonFileCRUD.getCompradorByCpf(cpf).equals(comprador));
         verify(mock, times(1)).loadJsonArray(filePath);
     }
+
     @Test
     public void getAllCompradores() throws Exception {
-        List<Comprador> result = Arrays.asList(comprador);
+        List<Comprador> result = Collections.singletonList(comprador);
         MyJsonFileUtil mock = mock(MyJsonFileUtil.class);
         JsonFileCRUDCompradorUtil jsonFileCRUD = new JsonFileCRUDCompradorUtil(mock);
         String filePath = jsonFileCRUD.getFilePath();
@@ -61,6 +56,7 @@ public class JsonFileCRUDCompradorUtilTest {
         assertTrue(jsonFileCRUD.getAllCompradores().equals(result));
         verify(mock, times(1)).loadJsonArray(filePath);
     }
+
     @Test
     public void createComprador() throws Exception {
         MyJsonFileUtil mock = mock(MyJsonFileUtil.class);
@@ -71,6 +67,7 @@ public class JsonFileCRUDCompradorUtilTest {
         jsonFileCRUD.createComprador(comprador);
         verify(mock, times(1)).loadJsonArray(filePath);
     }
+
     @Test
     public void updateComprador() throws Exception {
         String cpf = comprador.getCpf();
@@ -88,6 +85,7 @@ public class JsonFileCRUDCompradorUtilTest {
         jsonFileCRUD.updateComprador(cpf, alteredComprador);
         verify(mock, times(1)).loadJsonArray(filePath);
     }
+
     @Test
     public void deleteComprador() throws Exception {
         String cpf = comprador.getCpf();
@@ -98,5 +96,12 @@ public class JsonFileCRUDCompradorUtilTest {
         when(mock.loadJsonArray(filePath)).thenReturn(getFilledArray);
         jsonFileCRUD.deleteComprador(cpf);
         verify(mock, times(1)).loadJsonArray(filePath);
+    }
+
+    class MyJsonFileUtil extends JsonFileUtil {
+        @Override
+        public JSONArray loadJsonArray(String path) {
+            return super.loadJsonArray(path);
+        }
     }
 }
